# Face_DAI_WIN

./: README.md
FaceAlignment/: CMakeLists.txt
FaceIdentification/include/: aligner.h  bias_adder_net.h  blob.h  bn_net.h  common_net.h  conv_net.h  eltwise_net.h  face_alignment.h  face_detection.h  face_identification.h  face_rec.h  hyper_param.h  inner_product_net.h  libabc.h  log.h  math_functions.h  max_pooling_net.h  net.h  net_factory.h  pad_net.h  recognizer.h  spatial_transform_net.h  tform_maker_net.h  viplnet.h
FaceIdentification/include/dlib/: CMakeLists.txt~  dnn_face_recognition.cpp~
FaceIdentification/include/dlib/dnn/: layers.h  layers.h~  loss.h  loss.h~
FaceIdentification/include/dlib/geometry/: rectangle.h
FaceIdentification/include/dlib/image_transforms/: interpolation.h  random_cropper.h
FaceIdentification/include/dlib/statistics/: running_gradient.h  running_gradient.h~
FaceIdentification/include/dlib/threads/: threads_kernel_shared.h
FaceIdentification/src/: CMakeLists.txt
FaceIdentification/src/api/: CMakeLists.txt  demo.cpp  demo2.cpp  dlib_face_rec.cpp  face_rec.cpp  verify_face_rec.cpp
FaceIdentification/src/license/: CMakeLists.txt  demo_for_lib_license.cpp  libabc.cpp
FaceIdentification/src/license/generate/: config.ini  generate_license  generate_license.cpp
FaceIdentification/src/test/: CMakeLists.txt
